tests/cheri-ci/expected/0286-binary-operator.error.c.expected
cheri-ci/0286-binary-operator.error.c:3:5: error: constraint violation: invalid operands to binary expression ('struct (unnamed tag at cheri-ci/0286-binary-operator.error.c:2:3-18)' and 'signed int')
  a + 1;
  ~ ^ ~ 
ยง6.5.6#2: 
2   For addition, either both operands shall have arithmetic type, or one operand shall be a
    pointer to a complete object type and the other shall have integer type. (Incrementing is
    equivalent to adding 1.)
